WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202147
[Cocoa] Regression(
r212041
) Safari adds a .dms extension automatically when downloading binaries with no extension
https://bugs.webkit.org/show_bug.cgi?id=202147
Summary
[Cocoa] Regression(r212041) Safari adds a .dms extension automatically when d...
Chris Dumez
Reported
2019-09-24 09:44:32 PDT
We should not be adding file extensions to suggested filenames on platforms that do not require them to infer file type: -
https://html.spec.whatwg.org/#as-a-download
(step 15)
Attachments
Patch
(6.62 KB, patch)
2019-09-24 09:46 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(11.93 KB, patch)
2019-09-24 12:30 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(12.27 KB, patch)
2019-09-24 13:05 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(20.78 KB, patch)
2019-09-24 13:39 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(14.51 KB, patch)
2019-09-24 14:33 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-09-24 09:44:47 PDT
<
rdar://problem/54886021
>
Chris Dumez
Comment 2
2019-09-24 09:46:46 PDT
Created
attachment 379458
[details]
Patch
Chris Dumez
Comment 3
2019-09-24 10:57:28 PDT
Discussed it with Alexey offline and he has a better proposal. Will tweak the patch accordingly.
Chris Dumez
Comment 4
2019-09-24 12:30:47 PDT
Created
attachment 379467
[details]
Patch
Chris Dumez
Comment 5
2019-09-24 13:05:22 PDT
Created
attachment 379475
[details]
Patch
Chris Dumez
Comment 6
2019-09-24 13:39:25 PDT
Created
attachment 379484
[details]
Patch
Chris Dumez
Comment 7
2019-09-24 14:33:27 PDT
Created
attachment 379494
[details]
Patch
WebKit Commit Bot
Comment 8
2019-09-25 16:47:54 PDT
Comment on
attachment 379494
[details]
Patch Clearing flags on attachment: 379494 Committed
r250369
: <
https://trac.webkit.org/changeset/250369
>
WebKit Commit Bot
Comment 9
2019-09-25 16:47:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug